fix overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,10 +7,11 @@
 
     font-family: sans-serif;
 
-    color: var(--surface-600);
+    color: var(--surface-900);
 }
 
 body {
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
 }
